--- a/model.ipynb
+++ b/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,74 +42,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "X_train = data.drop(columns = ['metascore', 'user_score'])[0:4000]\n",
-    "y_train = data['metascore'][0:4000]\n",
-    "X_test = data.drop(columns = ['metascore', 'user_score'])[4001:]\n",
-    "y_test = data['metascore'][4001:]"
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train_trans = preproc(X_train)\n",
-    "X_test_trans = preproc(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'encode' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-38-4176c45231bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX_train_final\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mX_test_final\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mencode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreproc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpreproc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mreg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLinearRegression\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_train_trans\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mreg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_trans\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_test\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'encode' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.766450799277045\n",
+      "0.5471383438921464\n",
+      "0.5759467626253925\n",
+      "0.7929449987142254\n",
+      "0.7195641559611623\n"
      ]
     }
    ],
    "source": [
-    "X_train_final, X_test_final = encode(preproc(X_train), preproc(X_test))\n",
+    "from sklearn.model_selection import KFold\n",
     "\n",
-    "reg = LinearRegression().fit(X_train_trans, y_train)\n",
-    "reg.score(X_test_trans, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.74683778925156"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_test[obj_columns] = X_test[obj_columns].astype(str)\n",
-    "X_trans_test = enc.transform(X_test)\n",
+    "data = preproc(data)\n",
     "\n",
-    "reg.score(X_trans_test, y_test)"
+    "X = data.drop(columns = ['metascore', 'user_score']).to_numpy()\n",
+    "y = data['metascore'].to_numpy()\n",
+    "\n",
+    "kf = KFold(n_splits = 5)\n",
+    "for train_index, test_index in kf.split(X):\n",
+    "    X_train, X_test = X[train_index], X[test_index]\n",
+    "    y_train, y_test = y[train_index], y[test_index]\n",
+    "        \n",
+    "    X_train_final, X_test_final = encode(X_train, X_test)\n",
+    "    \n",
+    "    reg = LinearRegression().fit(X_train_final, y_train)\n",
+    "    print(reg.score(X_test_final, y_test))"
    ]
   },
   {
@@ -117,18 +91,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.model_selection import KFold\n",
-    "\n",
-    "kf = KFold(n_splits=2)\n",
-    "kf.get_n_splits(X)\n",
-    "print(kf)\n",
-    "KFold(n_splits=2, random_state=None, shuffle=False)\n",
-    "for train_index, test_index in kf.split(X):\n",
-    "     print(\"TRAIN:\", train_index, \"TEST:\", test_index)\n",
-    "     X_train, X_test = X[train_index], X[test_index]\n",
-    "     y_train, y_test = y[train_index], y[test_index]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
